// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform function test should correctly transform boolean 1`] = `undefined`;

exports[`transform function test should correctly transform function 1`] = `[MockFunction]`;

exports[`transform function test should correctly transform i18n 1`] = `undefined`;

exports[`transform function test should correctly transform tag 1`] = `
Array [
  <Chip
    className=""
    closeBtnAriaLabel="close"
    component="div"
    isOverflowChip={false}
    isReadOnly={true}
    onClick={[Function]}
    tooltipPosition="top"
  >
    tag1
  </Chip>,
  <Chip
    className=""
    closeBtnAriaLabel="close"
    component="div"
    isOverflowChip={false}
    isReadOnly={true}
    onClick={[Function]}
    tooltipPosition="top"
  >
    tag2
  </Chip>,
  <Chip
    className=""
    closeBtnAriaLabel="close"
    component="div"
    isOverflowChip={false}
    isReadOnly={true}
    onClick={[Function]}
    tooltipPosition="top"
  >
    tag3
  </Chip>,
]
`;

exports[`transform function test should correctly transform tag 2`] = `
Array [
  <Chip
    className=""
    closeBtnAriaLabel="close"
    component="div"
    isOverflowChip={false}
    isReadOnly={true}
    onClick={[Function]}
    tooltipPosition="top"
  >
    undefined:tag1
  </Chip>,
  <Chip
    className=""
    closeBtnAriaLabel="close"
    component="div"
    isOverflowChip={false}
    isReadOnly={true}
    onClick={[Function]}
    tooltipPosition="top"
  >
    undefined:tag2
  </Chip>,
  <Chip
    className=""
    closeBtnAriaLabel="close"
    component="div"
    isOverflowChip={false}
    isReadOnly={true}
    onClick={[Function]}
    tooltipPosition="top"
  >
    undefined:tag3
  </Chip>,
]
`;

exports[`transform function test should correctly transform tag 3`] = `"-"`;

exports[`transform function test should correctly transform the rest case 1`] = `"-"`;

exports[`transform function test should correctly transform the rest case 2`] = `"-"`;

exports[`transform function test should correctly transform timestamp 1`] = `"Invalid date"`;
